--- a/src/main/resources/messageResource_en.properties
+++ b/src/main/resources/messageResource_en.properties
@@ -1,11 +1,8 @@
-label.katalog=Ñatalog
+label.katalog=Catalog
 label.account=Account
 label.basket=Basket
 label.login=Login
 label.password=Password
 label.registration=Registration
-label.all=ALL
-label.pizza=PIZZA
-label.beverages=BEVERAGES
 label.firstName=First Name
 label.lastName=Last Name
