--- a/src/main/resources/messageResource_ru_RU.properties
+++ b/src/main/resources/messageResource_ru_RU.properties
@@ -6,3 +6,4 @@ label.password=\u041F\u0430\u0440\u043E\u043B\u044C
 label.registration=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 label.firstName=\u0418\u043C\u044F
 label.lastName=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
+label.email=\u041F\u043E\u0447\u0442\u0430
