--- a/src/main/resources/messageResource_ru_RU.properties
+++ b/src/main/resources/messageResource_ru_RU.properties
@@ -1,4 +1,4 @@
-label.katalog=\u041A\u0430\u0442\u0430\u043B\u043E\u0433
+label.catalog=\u041A\u0430\u0442\u0430\u043B\u043E\u0433
 label.account=\u0410\u043A\u043A\u0430\u0443\u043D\u0442
 label.basket=\u041A\u043E\u0440\u0437\u0438\u043D\u0430
 label.login=\u041B\u043E\u0433\u0438\u043D
